# LeagueOfLegends-Analytics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.bak  README.md  champ_detection.py  champ_extraction.py  compile_commands.json.bak  create_dataset.py  detect_circles.py  detect_ring.py  flake.nix  main.py  model_testing.py  object_extraction.py  opencv_lol  poppy_detected.xcf  remove_terrain.py  shell.nix
cpp/: circle_priority.cpp  circle_priority.hpp  detect_champ.cpp  detect_champ.hpp  display_test.cpp  main.cpp  remove_terrain.cpp  remove_terrain.hpp
dataset_creation/: create_dataset.py
python_prototype/: champ_detection.py  create_dataset.py  detect_circles.py  detect_ring.py  object_extraction.py  remove_terrain.py  ssim_test.py
reference_images/: request_champions_square_images.py
